fix: dark mode color of energy rating

--- a/src/styles/mixins/util.scss
+++ b/src/styles/mixins/util.scss
@@ -20,7 +20,10 @@
 
 
 @mixin inDarkMode() {
-  :global(#minded-6622.minded-6622-dark) {
+  //:global(#minded-6622.minded-6622-dark) & {
+  //  @content
+  //}
+  #minded-6622.minded-6622-dark & {
     @content
   }
 }
